agregar rutinas compuesto

--- a/html/entrenador/rutinas/rutinas.html
+++ b/html/entrenador/rutinas/rutinas.html
@@ -27,9 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="agregar_rutinas.html">Agregar rutina</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="asignar_rutinas.html">Asignar rutina</a>
-                    </li>
+                    </li> -->
                     <!--<li class="nav-item">
                         <a class="nav-link" href="modificar_rutinas.html">Modificar rutina</a>
                     </li>-->
