--- a/html/entrenador/rutinas/agregar_rutinas.html
+++ b/html/entrenador/rutinas/agregar_rutinas.html
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="agregar_rutinas.html">Agregar rutina</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="asignar_rutinas.html">Asignar rutina</a>
-                    </li>
+                    </li> -->
                     <!--<li class="nav-item">
                         <a class="nav-link" href="modificar_rutinas.html">Modificar rutina</a>
                     </li>-->
