--- a/public/html/entrenador/citas/asignar_cita.html
+++ b/public/html/entrenador/citas/asignar_cita.html
@@ -106,10 +106,12 @@
     </div>
 
     <!-- Firebase -->
-	<script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
-	<script src="../../../js/firebase_init.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
+    <script src="../../js/firebase_init.js"></script>
+    <script src="../../../js/firebase_init.js"></script>
+    <script src="../../../js/firebase_auth.js"></script>
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
