filtrado de rutinas y ejercicios por tipo

--- a/public/html/entrenador/rutinas/agregar_rutinas.html
+++ b/public/html/entrenador/rutinas/agregar_rutinas.html
@@ -60,10 +60,10 @@
                 <div class="row header-list mb-3"> <h6>Ejercicios</h6> </div>
                     <h6 class="text-center">Tipos de ejercicios</h6>
                     <ol class="filters">
-                        <li> <label for="tipo1">Todos</label> </li>
-                        <li> <label for="tipo2">Aerobicos</label> </li>
-                        <li> <label for="tipo3">Flexibilidad</label> </li>
-                        <li> <label for="tipo4">Fuerza</label> </li>
+                        <li onclick="filterExerciseTypes('All')"> <label for="tipo1">Todos</label> </li>
+                        <li onclick="filterExerciseTypes('Aerobicos')"> <label for="tipo2">Aerobicos</label> </li>
+                        <li onclick="filterExerciseTypes('Flexibilidad')"> <label for="tipo3">Flexibilidad</label> </li>
+                        <li onclick="filterExerciseTypes('Fuerza')"> <label for="tipo4">Fuerza</label> </li>
                     </ol>
                 
                 <div class="my-list" id="exercises_firebase_list">
@@ -286,5 +286,6 @@
     crossorigin="anonymous"></script>
     <script src="../../../js/util.js"></script>
     <script src="../../../js/entrenador/agregar_rutinas.js"></script>
+    <script src="../../../js/entrenador/filtrados.js"></script>
 </body>
 </html>
