--- a/public/html/entrenador/rutinas/asignar_rutinas.html
+++ b/public/html/entrenador/rutinas/asignar_rutinas.html
@@ -350,5 +350,6 @@
     crossorigin="anonymous"></script>
     <script src="../../../js/util.js"></script>
     <script src="../../../js/entrenador/asignar_rutinas.js"></script>
+    <script src="../../../js/entrenador/filtrados.js"></script>
 </body>
 </html>
