filtrado por nombre de usuario

--- a/public/html/entrenador/citas/asignar_cita.html
+++ b/public/html/entrenador/citas/asignar_cita.html
@@ -43,7 +43,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <input type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
+                    <input id="user_search_bar" type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
                 </div>
                 <div class="col-md-3">
                     <button type="button" name="button" class="btn" style="background-color: #2196f3; color: white;">Buscar</button>
@@ -109,7 +109,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
-    <script src="../../js/firebase_init.js"></script>
     <script src="../../../js/firebase_init.js"></script>
     <script src="../../../js/firebase_auth.js"></script>
     
