--- a/public/html/entrenador/rutinas/asignar_rutinas.html
+++ b/public/html/entrenador/rutinas/asignar_rutinas.html
@@ -47,10 +47,7 @@
     <div class="container mt-5" id="user_list">
         <div class="row">
             <div class="col-md-4">
-                <input type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
-            </div>
-            <div class="col-md-3">
-                <button type="button" name="button" class="btn" style="background-color: #2196f3; color: white;">Buscar</button>
+                <input id="user_search_bar" type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
             </div>
         </div>
 
