--- a/public/html/entrenador/usuarios.html
+++ b/public/html/entrenador/usuarios.html
@@ -58,10 +58,7 @@
                 <div class="col-md-10">
                     <div class="row">
                         <div class="col-md-6">
-                            <input type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
-                        </div>
-                        <div class="col-md-3">
-                            <button type="button" name="button" class="btn" style="background-color: #2196f3; color: white;">Buscar</button>
+                            <input id="user_search_bar" type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
                         </div>
                     </div>
                 </div>
