--- a/public/html/entrenador/rutinas/agregar_rutinas.html
+++ b/public/html/entrenador/rutinas/agregar_rutinas.html
@@ -44,9 +44,13 @@
     </nav>
 
     <div class="container">
-        <div class="alert alert-warning alert-dismissible fade show mt-3" role="alert" style="display: none;">
+        <!-- <div class="alert alert-warning alert-dismissible fade show mt-3" role="alert" style="display: none;">
             <strong>Lista de ejercicios vacía</strong> ¡Agrega por lo menos un ejercicio a la rutina!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div> -->
+
+        <div id="alerts_panel">
+
         </div>
 
         <div class="row mt-3" id="create_routine_panel">
