--- a/public/html/entrenador/citas/asignar_cita.html
+++ b/public/html/entrenador/citas/asignar_cita.html
@@ -43,7 +43,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <input id="user_search_bar" type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
+                    <input maxlength="30" id="user_search_bar" type="text" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
                 </div>
                 <div class="col-md-3">
                     <button type="button" name="button" class="btn" style="background-color: #2196f3; color: white;">Buscar</button>
