--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <div class="container">
-	<div class="alert alert-warning alert-dismissible fade show mt-3" role="alert" style="display: none;">
-		<strong>Usuario no válido</strong> ¡Esta cuenta le pertenece a un cliente!
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	<div id="alerts_panel">
+		<!-- <strong>Usuario no válido</strong> ¡Esta cuenta le pertenece a un cliente!
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button> -->
 	</div>
 
 	<div class="d-flex justify-content-center">
