--- a/public/recuperar_contraseña.html
+++ b/public/recuperar_contraseña.html
@@ -13,6 +13,14 @@
 </head>
 <body>
   <div class="container">
+		<div id="succesful_panel">
+
+		</div>
+
+		<div id="alerts_panel">
+
+		</div>
+
 		<div class="d-flex justify-content-center">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
@@ -21,36 +29,40 @@
 					</div>
 				</div>
 				<div class="justify-content-center form_container">
-					<form>
-						<div class="input-group">
-							<input type="email" name="" class="form-control input_user" value="" placeholder="Correo electrónico">
-						</div>
-                        <div class="mb-3">
-							<p class="text-danger error-message" style="display:none;">Error en el registro</p>
-						</div>
-
+					<form onkeydown="return event.key != 'Enter';" id="recuperacion_form" class="needs-validation">
+						<input id="form_email" pattern=".+@.+.com" type="email" class="form-control mt-3" value="" placeholder="Correo electrónico" required>
+                            <div class="invalid-feedback">
+                                Escriba su correo correctamente
+                            </div>
                         <div class="d-flex justify-content-center mt-3 login_container">
-                            <button type="button" name="button" class="btn login_btn" style="margin: 0" onclick="showComponent('#idEnviar')">Enviar</button>
+                            <button id="btn_recuperar" type="button" class="btn login_btn" style="margin: 0">Enviar</button>
                         </div>
                         <div class="d-flex justify-content-center login_container links">
-							<a href="login.html" class="btn mt-1" role="button" aria-pressed="true">Regresar</a>
+							<a href="index.html" class="btn mt-1" role="button" aria-pressed="true">Regresar</a>
 						</div>
-						<div class="d-flex justify-content-center mt-3" >
+						<!-- <div class="d-flex justify-content-center mt-3" >
                         <h6 class="text-white bold font-weight-bold" style="display: none;" id="idEnviar"  >Contraseña: 123456</h6>
-                        </div>
+                        </div> -->
 				  </form>
 				</div>
 			</div>
 		</div>
 	</div>
 
+	<!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
+    <script src="js/firebase_init.js"></script>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script
-src="https://code.jquery.com/jquery-3.6.0.min.js"
-integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-crossorigin="anonymous"></script>
-  <script src="js/util.js"></script>
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+	<script
+	src="https://code.jquery.com/jquery-3.6.0.min.js"
+	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	crossorigin="anonymous"></script>
+	<script src="js/util.js"></script>
+	<script src="js/recuperacion.js"></script>
   </body>
 </html>
