filtro de avances por fecha

--- a/public/html/entrenador/usuarios.html
+++ b/public/html/entrenador/usuarios.html
@@ -90,10 +90,7 @@
 
             <div class="row justify-content-start mt-3">
                 <div class="col-md-3">
-                    <input maxlength="30" type="date" name="" class="form-control mb-3" value="" placeholder="Nombre del usuario">
-                </div>
-                <div class="col-md-1">
-                    <button type="button" name="button" class="btn" style="background-color: #2196f3; color: white;">Buscar</button>
+                    <input id="progress_date" type="date" name="" class="form-control mb-3" value="">
                 </div>
                 <div class="col-md-1">
                     <button type="button" name="button" class="btn btn-danger" onclick="hideAndShow('#user_progress','#users_list')">Regresar</button>
