limite en datepicker

--- a/public/html/entrenador/perfil.html
+++ b/public/html/entrenador/perfil.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="registro_perfil.html">Registrar Perfil</a>
                     </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="rutinas.html">Rutinas</a>
+                        <a class="nav-link" href="rutinas/rutinas.html">Rutinas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="citas/citas.html">Citas</a>
