--- a/public/html/entrenador/rutinas/rutinas.html
+++ b/public/html/entrenador/rutinas/rutinas.html
@@ -82,13 +82,13 @@
                 <div class="row header-list mb-3"> <h6>Ejercicios</h6> </div>
                     <h6 class="text-center">Tipos de ejercicios</h6>
                     <ol class="filters">
-                        <li onclick="filterExerciseTypes('All')"> <label for="tipo1">Todos</label> </li>
-                        <li onclick="filterExerciseTypes('Aerobicos')"> <label for="tipo2">Aerobicos</label> </li>
-                        <li onclick="filterExerciseTypes('Flexibilidad')"> <label for="tipo3">Flexibilidad</label> </li>
-                        <li onclick="filterExerciseTypes('Fuerza')"> <label for="tipo4">Fuerza</label> </li>
+                        <li onclick="filterExerciseTypesEditRoutine('All')"> <label for="tipo1">Todos</label> </li>
+                        <li onclick="filterExerciseTypesEditRoutine('Aerobicos')"> <label for="tipo2">Aerobicos</label> </li>
+                        <li onclick="filterExerciseTypesEditRoutine('Flexibilidad')"> <label for="tipo3">Flexibilidad</label> </li>
+                        <li onclick="filterExerciseTypesEditRoutine('Fuerza')"> <label for="tipo4">Fuerza</label> </li>
                     </ol>
                 
-                <div class="my-list" id="exercises_firebase_list">
+                <div class="my-list" id="exercises_firebase_list_edit">
                 
                 </div>
             </div>
