mejoras en el formulario de registro y limpieza de formularios al terminar registros de ejercicios

--- a/public/html/entrenador/usuarios.html
+++ b/public/html/entrenador/usuarios.html
@@ -189,7 +189,7 @@
                                 <button id="btn_assign_routine" type="button" name="button" class="btn" style="background-color: #424242; color: white;">Asignar</button>
                             </div>
                             <div class="col">
-                                <button type="button" name="button" class="btn btn-danger" onclick="hideAndShow('#observations_form','#routines_list')">Regresar</button>
+                                <button type="button" name="button" class="btn btn-danger" onclick="backForm()">Regresar</button>
                             </div>
                         </div>
                     </form>
